--- a/SLL/SLL.vcxproj
+++ b/SLL/SLL.vcxproj
@@ -138,6 +138,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\DLL\DLL\DLinkedList.h" />
     <ClInclude Include="SLL.h" />
   </ItemGroup>
   <ItemGroup>
