--- a/SLL/SLL.vcxproj.filters
+++ b/SLL/SLL.vcxproj.filters
@@ -23,5 +23,8 @@
     <ClInclude Include="SLL.h">
       <Filter>Source Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\DLL\DLL\DLinkedList.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
